--- a/example_shotgrid.env
+++ b/example_shotgrid.env
@@ -1,11 +1,11 @@
 # Stacked environment variable management system.
 #
 # Environment variables are declared in namespaced .env files using yaml syntax.
-# The default stack declares env variables in stack.env files.
-# Create any new stack by creating new .env files, e.g. to create a new stack
-# called "thing", just create thing.env files in any given context.
+# Create stacks by creating .env files and declaring vars.
 #
-# $ pip install envstack
+# https://github.com/rsgalloway/envstack
+
+include: [default]
 
 all: &default
   LOG_LEVEL: INFO
