--- a/example_shotgrid.env
+++ b/example_shotgrid.env
@@ -1,18 +1,13 @@
 #!/usr/bin/env envstack
-
 include: [default]
-
-all: &default
+all: &all
   LOG_LEVEL: INFO
   SG_SCRIPT_URL: https://example.shotgunstudio.com
   SG_SCRIPT_NAME: script_name
   SG_SCRIPT_KEY: XXXXXXX
-
 darwin:
-  <<: *default
-
+  <<: *all
 linux:
-  <<: *default
-
+  <<: *all
 windows:
-  <<: *default
+  <<: *all
